kalgebra (4:4.8.4-0r0) UNRELEASED; urgency=low

  * New upstream release.

  [ José Manuel Santamaría Lema ]
  * Split analitza out of kalgebra:
    - drop enable_debianabimanager.diff, no longer needed since kalgebra doesn't
      provide any dynamic library now.
    - remove libanalitza4, libanalitzagui4 and kalgebra-dev binary packages.
    - build depend on libanalitza-dev.
  * Bump build dependencies for KDE SC 4.8.4:
    - kde-sc-dev-latest to 4:4.8.4.
    - kdelibs5-dev to 4:4.8.
    - libkdeedu-dev to 4:4.8.
  * Bump Standards-Version to 3.9.3, no changes needed.
  * Add watch file.

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sun, 17 Jun 2012 03:12:19 +0200

kalgebra (4:4.7.4-2) unstable; urgency=low

  * Team upload. Upload to unstable.

  [ José Manuel Santamaría Lema ]
  * Confirm symbols files on all architectures.

 -- Pino Toscano <pino@debian.org>  Wed, 07 Mar 2012 10:20:49 +0100

kalgebra (4:4.7.4-1) experimental; urgency=low

  * New upstream release.

  [ José Manuel Santamaría Lema ]
  * Bump kde-sc-dev-latest build dependency to 4:4.7.2.
  * Remove patches:
   - add_findanalitza.diff, applied upstream.
   - install_variables_model.diff, applied upstream.
  * Confirm symbols files on more architectures with 4.7.2 build logs.

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sun, 18 Dec 2011 00:52:42 +0100

kalgebra (4:4.7.2-1) experimental; urgency=low

  [ José Manuel Santamaría Lema ]
  * Initial release. Start from the Ubuntu packaging, thanks!

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sat, 03 Dec 2011 10:44:03 -0300