@@ -8,6 +8,9 @@ kalgebra (4:4.8.4-0r0) UNRELEASED; urgency=low
       provide any dynamic library now.
     - remove libanalitza4, libanalitzagui4 and kalgebra-dev binary packages.
     - build depend on libanalitza-dev.
+    - don't pass -DINSTALL_ANALITZA_HEADERS=TRUE to cmake.
+    - don't pass -c0 to dh_shlibdeps.
+    - remove override_dh_shlibdeps, no longer needed. 
   * Bump build dependencies for KDE SC 4.8.4:
     - kde-sc-dev-latest to 4:4.8.4.
     - kdelibs5-dev to 4:4.8.
